k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minicrit
  labels:
    app.kubernetes.io/name: minicrit
    app.kubernetes.io/part-of: minicrit
